--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -8,10 +8,12 @@
   --vuecal-events-color: var(--vuecal-contrast-color);
   --vuecal-events-border-color: currentColor;
   --vuecal-border-radius: 6px;
+  --vuecal-height: 500px;
 
   position: relative;
   border-radius: var(--vuecal-border-radius);
   color: var(--vuecal-base-color);
+  height: var(--vuecal-height);
 
   // Dark theme.
   // ------------------------------------------------------
@@ -126,6 +128,7 @@
     overflow: hidden;
     box-shadow: 0 0 0 0.5px var(--vuecal-border-color) inset;
   }
+  // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
   &.vuecal--lg .vuecal__scrollable--month-view .vuecal__cell {
     justify-content: flex-end;
     align-items: flex-start;
@@ -143,6 +146,7 @@
     font-weight: bold;
   }
 
+  // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
   &.vuecal--lg .vuecal__scrollable--month-view .vuecal__cell-date {
     padding: 4px;
     border-radius: 99em;
@@ -230,6 +234,7 @@
     .vuecal__nav--prev:before, .vuecal__nav--next:before {padding: 0.22em;}
     .vuecal__weekday {font-size: 0.95em;}
     .vuecal__body {padding: 2px;gap: 2px;}
+    // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
     .vuecal__scrollable--year-view .vuecal__body {padding: 0.6em;gap: 0.8em;}
     .vuecal__scrollable--month-view .vuecal__body,
     .vuecal__scrollable--year-view .vuecal__body,
@@ -240,9 +245,16 @@
       border-radius: 99em;
       font-weight: bold;
       font-size: 1em;
-      padding: 8px;
+      padding: 9px;
       box-shadow: none;
+
+      &--today:before,
+      &--current-month:before,
+      &--current-year:before {opacity: 0.1;}
+      &--selected:before {opacity: 0.25;}
     }
+    // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
+    .vuecal__scrollable--years-view .vuecal__cell {padding: 6px;}
     .vuecal__scrollable--month-view .vuecal__cell,
     .vuecal__scrollable--years-view .vuecal__cell {font-size: 0.9em;}
     .vuecal__cell-date {font-weight: bold;}
@@ -258,7 +270,7 @@
   }
   &.vuecal--xs {
     width: 210px;
-    height: 262px;
+    height: 250px;
 
     .vuecal__view-button,
     .vuecal__nav,
@@ -268,7 +280,8 @@
     .vuecal__title {gap: 4px;}
     .vuecal__title small {padding-left: 3px;padding-right: 3px;}
 
-    &.vuecal--year-view .vuecal__body,
-    &.vuecal--years-view .vuecal__body {margin: auto;}
+    // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
+    .vuecal__scrollable--year-view .vuecal__body,
+    .vuecal__scrollable--years-view .vuecal__body {margin: auto;}
   }
 }
