--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -128,16 +128,22 @@
     overflow: hidden;
     box-shadow: 0 0 0 0.5px var(--vuecal-border-color) inset;
   }
+
   // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
   &.vuecal--lg .vuecal__scrollable--month-view .vuecal__cell {
     justify-content: flex-end;
     align-items: flex-start;
+  }
 
-    &:before {display: none;}
-    &--selected .vuecal__cell-date {
-      background: var(--vuecal-primary-color);
-      color: var(--vuecal-secondary-color);
-    }
+  &.vuecal--light .vuecal__cell {filter: saturate(2);}
+
+  .vuecal__cell--selected {background-color: color-mix(in srgb, var(--vuecal-primary-color) 25%, transparent);}
+  .vuecal__cell:is(.vuecal__cell--today, .vuecal__cell--current-month, .vuecal__cell--current-year),
+  &.vuecal--light .vuecal__cell--selected {
+    background-color: color-mix(in srgb, var(--vuecal-primary-color) 10%, transparent);
+  }
+  &.vuecal--light .vuecal__cell:is(.vuecal__cell--today, .vuecal__cell--current-month, .vuecal__cell--current-year) {
+    background-color: color-mix(in srgb, var(--vuecal-primary-color) 5%, transparent);
   }
 
   .vuecal__cell-date {
@@ -147,28 +153,29 @@
   }
 
   // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
-  &.vuecal--lg .vuecal__scrollable--month-view .vuecal__cell-date {
-    padding: 4px;
-    border-radius: 99em;
-    width: 2em;
-    aspect-ratio: 1;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 4px;
-    font-size: 13px;
-    letter-spacing: -0.5px;
-
-    &:before {
-      content: '';
-      position: absolute;
-      inset: 0;
-      background: var(--vuecal-primary-color);
-      opacity: 0.1;
-      filter: saturate(2);
+  &:is(.vuecal--sm, .vuecal--lg) .vuecal__scrollable--month-view {
+    .vuecal__cell {background-color: transparent;}
+    .vuecal__cell-date {
+      padding: 4px;
+      border-radius: 99em;
+      width: 2em;
+      aspect-ratio: 1;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 4px;
+      font-size: 13px;
+      letter-spacing: -0.5px;
+      background-color: color-mix(in srgb, var(--vuecal-primary-color) 25%, transparent);
     }
+    .vuecal__cell--today .vuecal__cell-date {
+      background-color: color-mix(in srgb, var(--vuecal-primary-color) 60%, transparent);
+    }
+    .vuecal__cell--selected .vuecal__cell-date {background-color: var(--vuecal-primary-color);}
   }
+  }
+
   .vuecal__cell--out-of-scope .vuecal__cell-date {opacity: 0.4;}
   &.vuecal--lg .vuecal__cell--today .vuecal__cell-date:before {opacity: 0.3;}
 
@@ -253,6 +260,7 @@
       &--current-year:before {opacity: 0.1;}
       &--selected:before {opacity: 0.25;}
     }
+
     // Always use .vuecal__scrollable for view specific override for Vue transition to be smooth.
     .vuecal__scrollable--years-view .vuecal__cell {padding: 6px;}
     .vuecal__scrollable--month-view .vuecal__cell,
