--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -120,7 +120,7 @@
     display: block;
     font-size: 0.95em;
   }
-  &.vuecal--has-splits .vuecal__weekday {padding-left: 0;padding-right: 0;}
+  &.vuecal--has-schedules .vuecal__weekday {padding-left: 0;padding-right: 0;}
 
   // Calendar Body.
   // ------------------------------------------------------
