Scroll top after navigating to home + shift anchors up.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -66,10 +66,9 @@ a {
   text-decoration: none;
   color: $primary;
 
-  &[name] {
+  &[id] {
     position: relative;
-    top: -4em;
-    display: block;
+    top: -3rem;
   }
 }
 
