--- a/src/scss/documentation.scss
+++ b/src/scss/documentation.scss
@@ -6,7 +6,7 @@
     &.no-bullet {list-style-type: none;}
   }
 
-  h1 {line-height: 1;}
+  h1 {line-height: 1;margin-bottom: 3rem;}
 
   h2 {
     font-size: 27px;
