--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,12 @@
+// Breakpoints.
+// --------------------------------------------------------
+$xxs: 450px;
+$xs: 600px;
+$sm: 900px;
+$md: 1200px;
+$lg: 1400px;
+$xl: 1700px;
+
 $primary: #42b983;
 $page-max-width: 1200px;
 $container-padding-md: 20px;
