--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -22,7 +22,10 @@ h3 {
     font-weight: normal;
     color: #888;
 
-    .w-icon {vertical-align: middle;margin-bottom: 2px;}
+    .w-icon {
+      vertical-align: middle;
+      margin-bottom: 2px;
+    }
   }
 }
 
