--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -4,7 +4,9 @@ h1 {
 }
 
 h2 {
-  font-size: 27px;
+  font-size: 26px;
+  line-height: 1.1;
+  font-weight: normal;
   border-bottom: 1px solid #eee;
   margin-bottom: 30px;
   padding-bottom: 8px;
