Update the SCSS config, remove the deprecated import.

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,4 @@
-@import './variables';
-@import './base';
-@import './typography';
-@import './dark-theme';
+@forward './variables';
+@forward './base';
+@forward './typography';
+@forward './dark-theme';
