--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,11 +7,13 @@
   --w-base-color: #2c3e50;
   --code-color: #2399ee;
   --code-bg-color: color-mix(in srgb, var(--w-contrast-bg-color) 5%, transparent);
+  --highlight-color: #ecf3f8;
 
   &[data-theme="dark"] {
     --w-base-color: rgba(#fff, 0.8);
     --code-color: #84deff;
     --code-bg-color: color-mix(in srgb, var(--w-contrast-bg-color) 12%, transparent);
+    --highlight-color: #273134b5;
   }
 
   font: 15px 'Avenir', Helvetica, Arial, sans-serif;
@@ -62,8 +64,9 @@ aside {
     }
     &.router-link-active:after {
       border-right-color: var(--w-primary-color);
-      background-image: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(128, 231, 172, 0.12) 50%);
-      transform: scaleX(1);
+      background-image: linear-gradient(-90deg, var(--highlight-color), rgba(255, 255, 255, 0));
+      transform: scaleX(-1) rotateY(180deg);
+      z-index: -1;
     }
   }
 }
@@ -127,7 +130,7 @@ ul {
 }
 
 .highlight-box {
-  background: linear-gradient(45deg, #ecf8f1, rgba(#fff, 0));
+  background: linear-gradient(45deg, var(--highlight-color), rgba(255, 255, 255, 0));
   padding: 16px;
   border-radius: 8px;
 
