--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -9,10 +9,10 @@ h2 {
   font-size: 26px;
   line-height: 1.1;
   font-weight: normal;
-  border-bottom: 1px solid #eee;
   margin-bottom: 30px;
   padding-bottom: 8px;
   color: var(--w-primary-color);
+  border-bottom: 1px solid color-mix(in srgb, var(--w-contrast-bg-color) 12%, transparent);
 
   a {color: inherit;}
 }
@@ -24,7 +24,7 @@ h3 {
   a {
     font-size: 24px;
     font-weight: normal;
-    color: #888;
+    color: inherit;
 
     .w-icon {
       vertical-align: middle;
