--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -11,7 +11,7 @@ h2 {
   font-weight: normal;
   margin-bottom: 30px;
   padding-bottom: 8px;
-  color: var(--w-primary-color);
+  color: var(--headline-color);
   border-bottom: 1px solid color-mix(in srgb, var(--w-contrast-bg-color) 12%, transparent);
 
   a {color: inherit;}
