--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -103,7 +103,8 @@ footer {
   justify-content: space-between;
   font-size: 0.9em;
   font-style: italic;
-  margin: 1rem 0 1rem;
+  margin: 1rem 0 0.5rem;
+  line-height: 1;
 
   .w-icon {
     font-size: 1.2em;
