Update the documentation + docs UI and cleanup.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -220,6 +220,7 @@
     overflow: hidden;
 
     &--background {
+      border: none;
       border-radius: 0;
       overflow: visible;
       width: 100%;
