--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -165,7 +165,27 @@ ul {
   font-size: 13px;
   line-height: 1.35;
 
-  &[data-label] {margin-top: 2.5em;}
+  &[data-label] {
+    padding-top: 8px;
+  }
+  // Always add the label, even when not provided.
+  &[data-type="html-vue"]:before {content: 'HTML';}
+  &[data-type="js"]:before {content: 'JS';}
+  &[data-type="css"]:before {content: 'CSS';}
+  &[data-type="json"]:before {content: 'JSON';}
+
+  &[data-type]:before,
+  &[data-label][data-type]:before {
+    position: absolute;
+    top: 2px;
+    right: 4px;
+    font-size: 12px;
+    padding: 0;
+    border: none;
+    background: none;
+    opacity: 0.3;
+    font-family: monospace;
+  }
   &--dark {background-color: #2d2d2d;}
 }
 
