Add support for minCellWidth and minScheduleWidth as CSS vars.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -9,6 +9,8 @@
   --vuecal-events-border-color: currentColor;
   --vuecal-border-radius: 6px;
   --vuecal-height: 500px;
+  --vuecal-min-schedule-width: 0;
+  --vuecal-min-cell-width: 0;
 
   position: relative;
   border-radius: var(--vuecal-border-radius);
