Add a resize cursor while dragging in the calendar.

--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -17,6 +17,7 @@
   color: var(--vuecal-base-color);
   height: var(--vuecal-height);
 
+  &.vuecal--dragging {cursor: ns-resize;}
   // Dark theme.
   // ------------------------------------------------------
   &.vuecal--dark {
