--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -17,7 +17,9 @@
   color: var(--vuecal-base-color);
   height: var(--vuecal-height);
 
-  &.vuecal--dragging {cursor: ns-resize;}
+  &.vuecal--dragging-cell {cursor: ns-resize;}
+  &.vuecal--dragging-event {cursor: grabbing;}
+
   // Dark theme.
   // ------------------------------------------------------
   &.vuecal--dark {
