--- a/src/vue-cal/default-theme.scss
+++ b/src/vue-cal/default-theme.scss
@@ -139,6 +139,16 @@
     justify-content: flex-end;
     align-items: flex-start;
   }
+  &.vuecal--timeless .vuecal__cell-events {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 4px;
+    gap: 4px;
+  }
 
   &.vuecal--light .vuecal__cell {filter: saturate(2);}
 
@@ -223,6 +233,7 @@
     font-size: 12px;
     line-height: 1;
     overflow: hidden;
+    width: 90%;
 
     &--background {
       border: none;
@@ -248,6 +259,10 @@
       font-size: 11px;
     }
   }
+&.vuecal--timeless .vuecal__event {
+  position: relative;
+  width: 100%;
+}
 
   .vuecal__scrollable--month-view .vuecal__event {
     padding-top: 1px;
